--- a/failure.html
+++ b/failure.html
@@ -20,7 +20,7 @@
                 <div class="col-sm-6 col-sm-offset-3">
                     <br><br> <h2 style="color:#0fad00"></h2>
                     <img class="sucimg" src="https://media.tenor.com/9lcDyZCs87IAAAAd/middle-finger-flip-off.gif">
-                    <h2>Fuck you bitch...</h2>
+                    <h2>Failed</h2>
                     <p style="font-size:20px;color:#5C5C5C;">Thank you for Singing Up...Enough for today meet you in next version</p>
                 </div>
                 
